--- a/po/nl.po
+++ b/po/nl.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2011-02-15 09:19+0100\n"
-"PO-Revision-Date: 2011-05-28 17:10+0200\n"
+"PO-Revision-Date: 2011-06-02 16:35+0200\n"
 "Last-Translator: Pjotr <pliniusminor@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: nl\n"
@@ -60,7 +60,7 @@ msgstr "Geïnstalleerde Toepassing"
 #: ../data/ui/app-chooser.glade.h:13
 msgid "Set selected application as default action of this file type"
 msgstr ""
-"Stel geselecteerde toepassing in als de standaardactie voor dit bestandstype"
+"Stel geselecteerde toepassing in als de standaardactie voor dit bestandtype"
 
 #: ../data/ui/app-chooser.glade.h:14
 msgid "_Browse"
@@ -166,7 +166,7 @@ msgstr "<b>_Eigenaar:</b>"
 
 #: ../data/ui/file-prop.glade.h:16
 msgid "File Properties"
-msgstr "Bestandseigenschappen"
+msgstr "Bestandeigenschappen"
 
 #: ../data/ui/file-prop.glade.h:17
 msgid "Make the file executable"
@@ -247,7 +247,7 @@ msgstr "<b>E-mailprogramma</b>"
 
 #: ../data/ui/preferred-apps.glade.h:2
 msgid "<b>Terminal Emulator</b>"
-msgstr "<b>Terminavenster</b>"
+msgstr "<b>Terminalvenster</b>"
 
 #: ../data/ui/preferred-apps.glade.h:3
 msgid "<b>Web Browser</b>"
@@ -259,7 +259,7 @@ msgstr "Opdrachtregel:"
 
 #: ../data/ui/preferred-apps.glade.h:5
 msgid "File Associations"
-msgstr "Bestandsassociaties"
+msgstr "Bestandassociaties"
 
 #: ../data/ui/preferred-apps.glade.h:6 ../data/libfm-pref-apps.desktop.in.h:1
 msgid "Preferred Applications"
@@ -380,7 +380,7 @@ msgstr ""
 
 #: ../src/gtk/fm-progress-dlg.c:310
 msgid "The file operation is cancelled and there are some errors."
-msgstr "De bestandsoperatie is afgeblazen en er zijn enkele fouten."
+msgstr "De bestandoperatie is afgeblazen en er zijn enkele fouten."
 
 #: ../src/gtk/fm-progress-dlg.c:312
 msgid "Cancelled"
@@ -388,7 +388,7 @@ msgstr "Geannuleerd"
 
 #: ../src/gtk/fm-progress-dlg.c:316
 msgid "The file operation is finished, but there are some errors."
-msgstr "De bestandsoperatie is voltooid, maar er zijn enkele fouten."
+msgstr "De bestandoperatie is voltooid, maar er zijn enkele fouten."
 
 #: ../src/gtk/fm-progress-dlg.c:318
 msgid "Finished"
@@ -444,7 +444,7 @@ msgstr "Gelieve een geldige gebruikersnaam of numerieke ID in te voeren."
 
 #: ../src/gtk/fm-file-properties.c:208
 msgid "Please enter a valid group name or numeric id."
-msgstr "Gelieve een geldige groepsnaam of numerieke ID in te voeren."
+msgstr "Gelieve een geldige groepnaam of numerieke ID in te voeren."
 
 #: ../src/gtk/fm-file-properties.c:356
 msgid ""
@@ -532,7 +532,7 @@ msgstr "XDirectSave mislukt."
 
 #: ../src/gtk/fm-app-chooser-dlg.c:96
 msgid "Use selected application to open files"
-msgstr "Gebruik de geselecteerde toepassing om bestanden te openen"
+msgstr "Gebruik geselecteerde toepassing om bestanden te openen"
 
 #: ../src/gtk/fm-app-chooser-dlg.c:103
 msgid "Execute custom command line to open files"
@@ -592,7 +592,7 @@ msgstr "Gelieve een nieuwe naam in te voeren:"
 
 #: ../src/gtk/fm-gtk-utils.c:593
 msgid "Are you sure you want to empty the trash can?"
-msgstr "Weet u zeker dat u de prullenbak wilt legen?"
+msgstr "Weet u zeker dat u de prullenbak wil legen?"
 
 #: ../src/gtk/fm-gtk-file-launcher.c:115
 #, c-format
