Commit from LXDE Translation Project with Pootle by user brother.: 184 of 184 messages translated (0 fuzzy).

--- a/po/sv.po
+++ b/po/sv.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2011-06-11 19:32+0200\n"
-"PO-Revision-Date: 2010-10-24 11:46+0200\n"
+"PO-Revision-Date: 2011-06-11 20:05+0200\n"
 "Last-Translator: Martin <brother@bsnet.se>\n"
 "Language-Team: Swedish <tp-sv@listor.tp-sv.se>\n"
 "Language: sv\n"
@@ -595,7 +595,7 @@ msgid ""
 "This text file '%s' seems to be an executable script.\n"
 "What do you want to do with it?"
 msgstr ""
-"Den här textfilen \"%s\" verkar vara ett körbart skript.\n"
+"Textfilen \"%s\" verkar vara ett körbart skript.\n"
 "Vad vill du göra med den?"
 
 #: ../src/gtk/fm-gtk-file-launcher.c:122
@@ -605,12 +605,11 @@ msgstr "Textfilen \"%s\" är körbar. Vill du köra den nu?"
 
 #: ../src/gtk/fm-dir-tree-model.c:353
 msgid "<No Sub Folder>"
-msgstr ""
+msgstr "<Ingen underkatalog>"
 
 #: ../src/gtk/fm-dir-tree-model.c:355
-#, fuzzy
 msgid "Loading..."
-msgstr "Förbereder..."
+msgstr "Läser..."
 
 #: ../src/job/fm-dir-list-job.c:231 ../src/job/fm-dir-list-job.c:240
 #: ../src/job/fm-dir-list-job.c:337
@@ -805,12 +804,12 @@ msgstr "Optisk skiva"
 
 #: ../src/gtk/fm-side-pane.c:49 ../src/gtk/fm-side-pane.c:296
 msgid "Places"
-msgstr ""
+msgstr "Platser"
 
 #: ../src/gtk/fm-side-pane.c:50 ../src/gtk/fm-side-pane.c:306
 msgid "Directory Tree"
-msgstr ""
+msgstr "Katalogträd"
 
 #: ../src/gtk/fm-side-pane.c:51
 msgid "Remote"
-msgstr ""
+msgstr "Fjärr"
